created offline version, on click events/status coloring

--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Quran Track (Track your hifz/memorization)</title>
-  <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'></script> 
-  <script type='text/javascript' src="http://fb.me/JSXTransformer-0.10.0.js"></script>
-  <script type='text/javascript' src="http://fb.me/react-with-addons-0.10.0.js"></script>
-  <script type='text/javascript' src="http://rawgit.com/inventeye/quranverse/gh-pages/js/hifzdata.js"></script>
-  <script type='text/javascript' src="http://rawgit.com/inventeye/quranverse/gh-pages/js/quran.js"></script>
+  <script type='text/javascript' src='js/lib/underscore-min.js'></script> 
+  <script type='text/javascript' src="js/lib/JSXTransformer-0.10.0.js"></script>
+  <script type='text/javascript' src="js/lib/react-with-addons-0.10.0.js"></script>
+  <script type='text/javascript' src="js/hifzdata.js"></script>
+  <script type='text/javascript' src="js/quran.js"></script>
   <style type='text/css'>
     .Surah{border: 1px solid teal; clear: both; margin-bottom: 7px; }
 	.Ayah{
